--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,4 +17,4 @@ spring.jackson.deserialization.ACCEPT_SINGLE_VALUE_AS_ARRAY=true
 spring.flyway.enabled=true
 spring.flyway.baseline-on-migrate=true
 spring.flyway.baseline-version=0
-spring.flyway.locations=db/migration
+spring.flyway.locations=filesystem:db/migration
