--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,24 @@
 # ????????? ??????????? ????
 server.port=8080
 
-# ??????????? ? ???? ??????
+# DataBase configuration
 spring.datasource.url=jdbc:postgresql://${DATABASE_URL:localhost}:5432/pkmn_db
 spring.datasource.username=pkmn_user
 spring.datasource.password=pkmn_password
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# ????????? JPA ??? ??????? ?????????? - ?????????? ???? ??????
+# JPA
 spring.jpa.hibernate.ddl-auto=validate
 
-# ??????? ??? ?????????????? AttackSkill
+# AttackSkill
 spring.jackson.deserialization.ACCEPT_SINGLE_VALUE_AS_ARRAY=true
 
-# ????????? ???????? FlyWay
+#FlyWay configuration
 spring.flyway.enabled=true
 spring.flyway.baseline-on-migrate=true
 spring.flyway.baseline-version=0
 spring.flyway.locations=filesystem:db/migration
+
+#Token configuration
+token.secret=skygreenPkmn-secret
+token.expiration=5
